kubernetes/clusters/main/rook-ceph/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: rook-ceph
spec:
  endpointSelector: {}
  egress:
    - {}
  ingress:
    - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-within-namespace
  namespace: &namespace rook-ceph
spec:
  endpointSelector:
    matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": *namespace
    authentication:
      mode: required
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": *namespace
    authentication:
      mode: required
